--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Visual Subnet Calculator</title>
+<title>Visual Subnet Caldculator</title>
 <script language="javascript" type="text/javascript">
 <!--
 
@@ -539,16 +539,16 @@ P		{
 <tr valign=top>
 <td>
 
-<h1>Visual Subnet Calculator</h1>
+<h1>Subnetting Calculator</h1>
 
-<p>Enter the network you wish to subnet:</p>
+<p>Masukkan Network Address yang ingin kalian subnetting:</p>
 
 <form name="calc" onsubmit="updateNetwork(); return false;">
 
 <table cellspacing="0">
 <tr>
 <td class="label">Network Address</td>
-<td class="label">Mask bits</td>
+<td class="label">Subnet</td>
 </tr>
 <tr>
 <td><input type="text" name="network" size="15" maxlength="15" value="192.168.0.0"></td>
@@ -581,9 +581,9 @@ P		{
 <th id="netmaskHeader">Netmask</th>
 <th id="rangeHeader">Range of addresses</th>
 <th id="useableHeader">Useable IPs</th>
-<th id="hostsHeader">Hosts</th>
-<th id="divideHeader">Divide</th>
-<th id="joinHeader">Join</th>
+<th id="hostsHeader">Host</th>
+<th id="divideHeader">Bagi</th>
+<th id="joinHeader">Subnet</th>
 </tr>
 </thead>
 <tbody id="calcbody">
