--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ P		{
 
 <h1>Subnetting Calculator</h1>
 
-<p>Masukkan Network Address yang ingin kalian subnetting:</p>
+<p>Masukkan Network Address yang ingin anda subnetting:</p>
 
 <form name="calc" onsubmit="updateNetwork(); return false;">
 
