--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Visual Subnet Caldculator</title>
+<title>Visual Subnet Calculator</title>
 <script language="javascript" type="text/javascript">
 <!--
 
